src/objects/Named_Credential_Mapping__mdt.object
<CustomObject>
    <description>Stores which Named Credential needs to be used as part of a process.
It also store the remaining part of the URL to consume the API Resource.</description>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <description>HTTP Method to use during the callout</description>
        <inlineHelpText>HTTP Method to use during the callout</inlineHelpText>
        <label>HTTP Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Named_Credential_To_Use__c</fullName>
        <description>Is the API name of the named credential to use</description>
        <inlineHelpText>name of the named credential to use</inlineHelpText>
        <label>Named Credential To Use</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <description>Is the resource to use, aka the additional part to the URL to append to the Named Credential&apos;s URL (e.g. : /provisioning/users)</description>
        <inlineHelpText>Is the resource to use, aka the additional part to the URL to append to the Named Credential&apos;s URL (e.g. : /provisioning/users)</inlineHelpText>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Named Credential Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Named_Credential_To_Use__c</columns>
        <columns>Resource__c</columns>
        <columns>HTTP_Method__c</columns>
        <columns>IsProtected</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Named Credential Mapping</pluralLabel>
</CustomObject>